@@ -1,0 +1,1 @@
+Make idlelib.run runnable; add test clause.
